--- a/man_3_printf.1
+++ b/man_3_printf.1
@@ -5,10 +5,10 @@
 
 .SH SYNOPSIS
 .B \_printf
-[\fIOPTION\fR]... \fIFORMAT\fR \fIARGUMENT\fR...
+\fIFORMAT\fR \fIARGUMENT\fR...
 
 .SH DESCRIPTION
-The \fB\_printf\fR function is a custom implementation of the \fBprintf\fR function, designed to provide formatted output to the standard output.
+The \fB\_printf\fR function is a custom implementation of the \fBprintf\fR function, designed to print formatted output to the standard output.
 
 .SH OPTIONS
 The following conversion specifiers are supported:
@@ -99,4 +99,4 @@ Report bugs to  nicolas.taillepierre@holbertonstudents.com || alexandre.wertel@h
 November 20, 2023
 
 .SH COPYRIGHT
-Copyright \(co 2023 Nicolas Taillepierre && Alexandre Wertel. This is free software: you are free to change and redistribute it.
+Copyright \(co 2023 Nicolas Taillepierre && Alexandre Wertel. .BR This is free software: you are free to change and redistribute it.
