--- a/man_3_printf.1
+++ b/man_3_printf.1
@@ -99,4 +99,5 @@ Report bugs to  nicolas.taillepierre@holbertonstudents.com || alexandre.wertel@h
 November 20, 2023
 
 .SH COPYRIGHT
-Copyright \(co 2023 Nicolas Taillepierre && Alexandre Wertel. .BR This is free software: you are free to change and redistribute it.
+Copyright \(co 2023 Nicolas Taillepierre && Alexandre Wertel. 
+.BR This is free software: you are free to change and redistribute it.
