--- a/man_3_printf.1
+++ b/man_3_printf.1
@@ -100,4 +100,4 @@ November 20, 2023
 
 .SH COPYRIGHT
 Copyright \(co 2023 Nicolas Taillepierre && Alexandre Wertel. 
-.BR \This is free software: you are free to change and redistribute it.
+.BR This is free software: you are free to change and redistribute it.
